Fix bug 'Duplicate object widgets after copy and paste of messages into same diagram'.

The bug is fixed by comparing the paste scene id with the source diagram
and to skip object widget creating if the id's are equal.

BUG:340937
FIXED-IN:14.11.95